--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -38,3 +38,37 @@ spec:
   ports:
   - port: 27017
   type: ClusterIP
+
+---
+
+# Deployment da aplicação web Rotten Potatoes
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: web
+spec:
+  selector:
+    matchLabels: 
+      app: web
+  template:
+    metadata:
+      labels:
+        app: web
+    spec:
+      containers:
+      - name: web
+        image: bryanlimadev/rotten-potatoes:v1
+        ports:
+        - containerPort: 5000
+        env:
+        - name: MONGODB_DB
+          value: admin
+        - name: MONGODB_HOST
+          value: mongodb
+        - name: MONGODB_PORT
+          value: "27017"
+        - name: MONGODB_USERNAME
+          value: mongouser
+        - name: MONGODB_PASSWORD
+          value: mongopwd
