--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -72,3 +72,20 @@ spec:
           value: mongouser
         - name: MONGODB_PASSWORD
           value: mongopwd
+
+---
+
+# Service da aplicação web Rotten Potatoes
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: web
+spec:
+  selector: 
+    app: web
+  ports:
+  - port: 80
+    targetPort: 5000
+    nodePort: 30000
+  type: NodePort
