--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,10 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.K8S_KUBECONFIG }}
+          
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v3.0
+        with:
+          images: bryanlimadev/rotten-potatoes:${{ github.run_number }}
+          manifests: |
+            k8s/deployment.yaml
